# FFMPEG_TIMESLAP

./: .gitignore  README.md  claude.md  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
docs/: codec_compatibility.md  ffmpeg_info.md
docs/issues/: issue-001-rotation-live-preview.md  issue-002-crop-settings-lost-on-image-change.md  issue-003-crop-mouse-interaction-issues.md
ffmpeg_binaries/: .gitignore  README.md  download_ffmpeg.ps1
src/ffmpeg_timeslap/: __init__.py  main.py
src/ffmpeg_timeslap/core/: __init__.py  command_builder.py  encoder.py  models.py  progress_parser.py  sequence_detector.py
src/ffmpeg_timeslap/gui/: __init__.py  main_window.py
src/ffmpeg_timeslap/gui/dialogs/: __init__.py  error_dialog.py  preview_dialog.py  save_preset_dialog.py
src/ffmpeg_timeslap/gui/widgets/: __init__.py  advanced_settings_widget.py  basic_settings_widget.py  encoding_widget.py  filter_settings_widget.py  image_preview_widget.py  input_output_widget.py  interactive_crop_widget.py  preset_widget.py  sequence_info_widget.py
src/ffmpeg_timeslap/presets/: __init__.py  preset_manager.py
src/ffmpeg_timeslap/presets/defaults/: archiv.json  instagram.json  preview.json  twitter.json  youtube_4k.json  youtube_hd.json
src/ffmpeg_timeslap/utils/: __init__.py  aspect_ratio.py  constants.py  ffmpeg_locator.py  validators.py
tests/: __init__.py
